--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.5",
+    "dotenv": "^8.2.0",
     "request": "^2.88.2"
   }
 }
